@@ -1,0 +1,58 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2014             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# ails.  You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+domino_transactions_default_levels = ( 30000, 35000 )
+
+def inventory_domino_transactions(info):
+    if info:
+        yield None, 'domino_transactions_default_levels'
+
+def check_domino_transactions(_no_item, params, info):
+    if info:
+        reading = int(info[0][0])
+        warn, crit = params
+        infotext = "Transactions per minute (avg): %s" % reading
+        levels = " (Warn/Crit at %s/%s)" % ( warn, crit )
+        perfdata = [ ( "transactions", reading, warn, crit ) ]
+        state = 0
+        if reading >= crit:
+            state = 2
+            infotext += levels
+        elif reading >= warn:
+            state = 1
+            infotext += levels
+        yield state, infotext, perfdata
+
+
+check_info["domino_transactions"] = {
+    "check_function"          : check_domino_transactions,
+    "inventory_function"      : inventory_domino_transactions,
+    "service_description"     : "Domino Server Transactions",
+    "has_perfdata"            : True,
+    "snmp_scan_function"      : lambda oid: oid(".1.3.6.1.2.1.1.2.0") == ".1.3.6.1.4.1.311.1.1.3.1.2",
+    "snmp_info"               : (".1.3.6.1.4.1.334.72.1.1.6.3", [2]),
+    "group"		      : "domino_transactions"
+}
