@@ -76,6 +76,7 @@
     * 1188 veeam_client: Check now also outputs ReadSize and TransferedSize...
     * 0663 domino_info: new check to extract informational data about a Lotus Domino Server
     * 0664 domino_users: new check to monitor the number of users on a Domino Notes server
+    * 1447 domino_transactions: new check to monitor the number of transactions per minute on Lotus Domino servers
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
